; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_sb_pool_set.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_sb_pool_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devlink = type { %struct.devlink_ops* }
%struct.devlink_ops = type { i32 (%struct.devlink.0*, i32, i32, i32, i32, %struct.netlink_ext_ack*)* }
%struct.devlink.0 = type opaque
%struct.netlink_ext_ack = type { i32 }

@EOPNOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.devlink*, i32, i32, i32, i32, %struct.netlink_ext_ack*)* @devlink_sb_pool_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @devlink_sb_pool_set(%struct.devlink* %0, i32 %1, i32 %2, i32 %3, i32 %4, %struct.netlink_ext_ack* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.devlink*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.netlink_ext_ack*, align 8
  %14 = alloca %struct.devlink_ops*, align 8
  store %struct.devlink* %0, %struct.devlink** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store %struct.netlink_ext_ack* %5, %struct.netlink_ext_ack** %13, align 8
  %15 = load %struct.devlink*, %struct.devlink** %8, align 8
  %16 = getelementptr inbounds %struct.devlink, %struct.devlink* %15, i32 0, i32 0
  %17 = load %struct.devlink_ops*, %struct.devlink_ops** %16, align 8
  store %struct.devlink_ops* %17, %struct.devlink_ops** %14, align 8
  %18 = load %struct.devlink_ops*, %struct.devlink_ops** %14, align 8
  %19 = getelementptr inbounds %struct.devlink_ops, %struct.devlink_ops* %18, i32 0, i32 0
  %20 = load i32 (%struct.devlink.0*, i32, i32, i32, i32, %struct.netlink_ext_ack*)*, i32 (%struct.devlink.0*, i32, i32, i32, i32, %struct.netlink_ext_ack*)** %19, align 8
  %21 = icmp ne i32 (%struct.devlink.0*, i32, i32, i32, i32, %struct.netlink_ext_ack*)* %20, null
  br i1 %21, label %22, label %34

22:                                               ; preds = %6
  %23 = load %struct.devlink_ops*, %struct.devlink_ops** %14, align 8
  %24 = getelementptr inbounds %struct.devlink_ops, %struct.devlink_ops* %23, i32 0, i32 0
  %25 = load i32 (%struct.devlink.0*, i32, i32, i32, i32, %struct.netlink_ext_ack*)*, i32 (%struct.devlink.0*, i32, i32, i32, i32, %struct.netlink_ext_ack*)** %24, align 8
  %26 = load %struct.devlink*, %struct.devlink** %8, align 8
  %27 = bitcast %struct.devlink* %26 to %struct.devlink.0*
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %11, align 4
  %31 = load i32, i32* %12, align 4
  %32 = load %struct.netlink_ext_ack*, %struct.netlink_ext_ack** %13, align 8
  %33 = call i32 %25(%struct.devlink.0* %27, i32 %28, i32 %29, i32 %30, i32 %31, %struct.netlink_ext_ack* %32)
  store i32 %33, i32* %7, align 4
  br label %37

34:                                               ; preds = %6
  %35 = load i32, i32* @EOPNOTSUPP, align 4
  %36 = sub nsw i32 0, %35
  store i32 %36, i32* %7, align 4
  br label %37

37:                                               ; preds = %34, %22
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
